eks_infra/dev_backup_Nov15_working/argocd_helm_values/fullstack_ingress_alb.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: prometheus-ingress
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: my-aws-ingress-class
  rules:
    - host: monitoring.devopsprotech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     alb.ingress.kubernetes.io/backend-protocol-version: HTTP1 #This tells AWS to send traffic from the ALB using HTTP2. Can use GRPC as well if you want to leverage GRPC specific features
#   labels:
#     app: argogrpc
#   name: argogrpc
#   namespace: argocd
# spec:
#   ports:
#   - name: "80"
#     port: 80
#     protocol: TCP
#     targetPort: 8080
#   selector:
#     app.kubernetes.io/name: argocd-server
#   sessionAffinity: None
#   type: ClusterIP
# ---
#   apiVersion: networking.k8s.io/v1
#   kind: Ingress
#   metadata:
#     annotations:
#       alb.ingress.kubernetes.io/scheme: internet-facing
#       alb.ingress.kubernetes.io/load-balancer-name: argocd-ingress
#       alb.ingress.kubernetes.io/target-type: ip
#       alb.ingress.kubernetes.io/backend-protocol: HTTP1
#       # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
#       # alb.ingress.kubernetes.io/conditions.argogrpc: |
#       #   [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
#       alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
#     name: argocd
#     namespace: argocd
#   spec:
#     ingressClassName: my-aws-ingress-class
#     rules:
#     - host: argocd.devopsprotech.com
#       http:
#         paths:
#         - path: /
#           backend:
#             service:
#               name: argogrpc
#               port:
#                 number: 80
#           pathType: Prefix
#         - path: /app
#           backend:
#             service:
#               name: argocd-server
#               port:
#                 number: 80
#           pathType: Prefix
#     # tls:
#     # - hosts:
#     #   - argocd.devopsprotech.com
